# Colloquium_OS

./: README.md  answer_first.docx  answer_second.docx
2nd/: main.cpp
problems/: CMakeLists.txt
problems/include/: duplicate_remover.h  factorial_generator.h  list_reverser.h
problems/src/: duplicate_remover.cpp  factorial_generator.cpp  list_reverser.cpp  main.cpp
problems/tests/: CMakeLists.txt  test_duplicate_remover.cpp  test_factorial.cpp  test_list_reverser.cpp
